[tool.poetry]
name = "mime"
version = "0.1.2"
description = ""
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
enumb = {git = "https://github.com/tombulled/enumb.git", rev = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
