[tool.poetry]
name = "mediatype"
version = "0.1.6"
description = "Media Type parsing and creation"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tombulled/mediatype"
repository = "https://github.com/tombulled/mediatype"
documentation = "https://github.com/tombulled/mediatype"
keywords = ["python", "mimetype", "mediatype", "contenttype", "mime"]

[tool.poetry.dependencies]
python = "^3.8"
enumb = "^0.1.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
